# ChemREL

./: .gitignore  README.md  pyproject.toml  toy_notebook.ipynb
chemrel/: LICENSE  README.md  pyproject.toml
chemrel/src/chemrel/: cli.py  cli_constants.py
chemrel/src/chemrel/functions/: auxiliary.py  build.py  parser.py  pipeline.py  predict.py  relutils.py  test.py
docs/: .buildinfo  chemrel.functions.html  cli.html  functions.auxiliary.html  functions.html  functions.predict.html  functions_index.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  usage.html
docs/.doctrees/: chemrel.functions.doctree  cli.doctree  environment.pickle  functions.auxiliary.doctree  functions.doctree  functions.predict.doctree  functions_index.doctree  index.doctree  modules.doctree  setup.doctree  usage.doctree
docs/.doctrees/notebooks/: predict.doctree  predict_demo.doctree  spancat_demo.doctree
docs/_sources/: cli.md.txt  functions.rst.txt  functions_index.md.txt  index.md.txt  index.rst.txt  setup.md.txt
docs/_sources/notebooks/: predict.ipynb.txt  predict_demo.ipynb.txt  spancat_demo.ipynb.txt
docs/notebooks/: predict.html  predict_demo.html  spancat_demo.html
docs_src/: chemrel.functions.rst  cli.md  conf.py  functions.auxiliary.rst  functions.predict.rst  index.md  index.rst  modules.rst  setup.md  usage.md
docs_src/notebooks/: predict.ipynb  spancat_demo.ipynb
source/: conf.py  functions.rst  index.rst  modules.rst
src/chemrel/: cli.py  cli_constants.py
src/chemrel/assets/: LD50gold.jsonl
src/chemrel/chemrelmodels/rel/tok2vec/: config.cfg  meta.json
src/chemrel/chemrelmodels/rel/trf/: config.cfg  meta.json
src/chemrel/chemrelmodels/sc/tok2vec/: config.cfg  meta.json
src/chemrel/chemrelmodels/sc/tok2vec/spancat/: cfg
src/chemrel/chemrelmodels/sc/trf/: config.cfg  meta.json
src/chemrel/configs/: rel_TL_tok2vec.cfg  rel_TL_trf.cfg  rel_tok2vec.cfg  rel_trf.cfg  sc_TL_tok2vec.cfg  sc_TL_trf.cfg  sc_tok2vec.cfg  sc_trf.cfg
src/chemrel/functions/: auxiliary.py  model.py  parser.py  predict.py  relutils.py
src/chemrel/reldata/: ld50_rel_train.spacy  ld50_rel_val-test.spacy  mp_rel_test.spacy  mp_rel_train-val.spacy
src/chemrel/scdata/: ld50_sc_train.spacy  ld50_sc_val-test.spacy  mp_sc_test.spacy  mp_sc_train-val.spacy
(+7 files in other folders)
