[project]
name = "chemrel"
version = "0.0.5"
description = "A project which focuses on automating and transferring chemical data extraction using span categorization and relation extraction models."
dependencies = [
    "huggingface-hub",
    "rich",
    "nltk",
    "httpx",
    "jsonlines",
    "PyMuPDF",
    "typer",
    "urllib3 < 2.0",
    "regex",
    "spacy",
    "spacy-transformers"
]
readme = "README.md"

[project.scripts]
chemrel = "chemrel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

