[project]
name = "chemrel"
version = "0.0.11"
description = "A project which focuses on automating and transferring chemical data extraction using span categorization and relation extraction models."
requires-python = ">=3.8"
dependencies = [
    "huggingface-hub",
    "rich",
    "nltk",
    "httpx",
    "jsonlines",
    "PyMuPDF",
    "typer",
    "urllib3 < 2.0",
    "regex",
    "spacy",
    "spacy-transformers"
]
readme = "README.md"

[project.scripts]
chemrel = "chemrel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

